--- a/client/src/pages/collectables/collectables.styles.css
+++ b/client/src/pages/collectables/collectables.styles.css
@@ -5,10 +5,14 @@
     z-index: -2;
     width: 100%;
 }
+.c-content{
+    position: relative;
+    margin-top: -23rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
 .c-heading{
-    margin-left: 2rem;
-    font-weight: 900;
+    font-weight: 600;
     margin-top: 1rem;
-    font-size: 70px;
-    text-align: left;
+    font-size: 40px;
 }
