--- a/client/src/pages/collectables/collectables.styles.css
+++ b/client/src/pages/collectables/collectables.styles.css
@@ -7,8 +7,8 @@
 }
 .c-content{
     position: relative;
-    margin-top: -23rem;
-    padding: 0 7rem;
+    margin-top: -27rem;
+    padding: 0 3rem;
 }
 .c-heading{
     font-weight: 600;
@@ -39,7 +39,7 @@
     font-weight: 200;
     color: #fff;
     cursor: pointer;
-    margin-left: 55rem;
+    float: right;
     margin-top: 5rem;
     height: 45px;
     text-align:center;
